<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:stretchColumns="1">

    <TableRow>

        <TextView
            android:id="@+id/UserView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/UserEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/please_write_account"
            android:selectAllOnFocus="true"
            android:text="@string/please_write_account" />
    </TableRow>


    <TableRow>

        <TextView
            android:id="@+id/PasswordView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/PasswordEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="numberPassword" />
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/ageVew"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/age"
            android:textAlignment="gravity"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/ageText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/BirthdayView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/birthday"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/BirthdayEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/phoneView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phone_number"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/phoneEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone" />

    </TableRow>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textColor="@android:color/holo_purple"
        android:textStyle="bold" />

</TableLayout>
